LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
 							<!-- Social -->
 							<ul class="social">
 								<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><span class="fa fa-facebook"></span></a></li>
-								<li><a href="https://www.linkedin.com/in/christie-williams-911383b5/" target="blank"><span class="fa fa-linkedin"></span></a></li>
-								<li><a href="https://github.com/cholvie"><span class="fa fa-github" target="blank"></span></a></li>
+								<li><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><span class="fa fa-linkedin"></span></a></li>
+								<li><a href="https://github.com/ChristieHarwell"><span class="fa fa-github" target="blank"></span></a></li>
 								<!-- <li><a href="#"><span class="fa fa-instagram"></span></a></li> -->
 								<!-- <li><a href="#"><span class="fa fa-pinterest-p"></span></a></li> -->
 							</ul>
