--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									<ul>
 										<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook-f"></i></a></li>
 										<li><a href="https://www.linkedin.com/in/christie-williams-911383b5/" target="blank"><i class="fa fa-linkedin"></i></a></li>
-										<li><a href="https://github.com/cholvie"><i class="fa fa-github" target="blank"></i></a></li>
+										<li><a href="https://github.com/cholvie" target="blank"><i class="fa fa-github"></i></a></li>
 										<!-- <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li> -->
 									</ul>
 								</div>
