LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
 		<!-- Social -->
 		<div class="social-body">
-			<ul>
+			<ul>				
+				<li class="twitter"><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><i class="fa fa-linkedin"></i></a></li>
+				<li class="instagram"><a href="https://github.com/cholvie" target="blank"><i class="fa fa-github"></i></a></li>
 				<li class="facebook"><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook"></i></a></li>
-				<li class="twitter"><a href="https://www.linkedin.com/in/christie-williams-911383b5/" target="blank"><i class="fa fa-linkedin"></i></a></li>
-				<li class="instagram"><a href="https://github.com/cholvie"><i class="fa fa-github" target="blank"></i></a></li>
 				<!-- <li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li> -->
 			</ul>
 		</div>
@@ -115,10 +115,10 @@
 									<a href="img/resume/ChristieHarwellResume.pdf" target="blank">download resume</a>
 								</div>
 								<div class="social">
-									<ul>
-										<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook-f"></i></a></li>
-										<li><a href="https://www.linkedin.com/in/christie-williams-911383b5/" target="blank"><i class="fa fa-linkedin"></i></a></li>
+									<ul>										
+										<li><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><i class="fa fa-linkedin"></i></a></li>
 										<li><a href="https://github.com/cholvie" target="blank"><i class="fa fa-github"></i></a></li>
+										<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook-f"></i></a></li>
 										<!-- <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li> -->
 									</ul>
 								</div>
@@ -679,10 +679,10 @@
 								<img src="img/logoSmall.png" alt="#">
 							</div>
 							<!-- Social -->
-							<ul class="social">
-								<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><span class="fa fa-facebook"></span></a></li>
+							<ul class="social">								
 								<li><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><span class="fa fa-linkedin"></span></a></li>
 								<li><a href="https://github.com/ChristieHarwell" target="blank"><span class="fa fa-github"></span></a></li>
+								<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><span class="fa fa-facebook"></span></a></li>
 								<!-- <li><a href="#"><span class="fa fa-instagram"></span></a></li> -->
 								<!-- <li><a href="#"><span class="fa fa-pinterest-p"></span></a></li> -->
 							</ul>
