--- a/index.html
+++ b/index.html
@@ -718,6 +718,9 @@
 		<script src="js/jquery.magnific-popup.min.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC0RqLa90WDfoJedoE3Z_Gy7a7o8PCL2jw"></script>
         <script type="text/javascript" src="js/gmaps.min.js"></script>
-        <script src="js/main.js"></script>
+		<script src="js/main.js"></script>
+
+		<!-- linkedin link requirement for thumbnail -->
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </body>
 </html>
