LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -721,6 +721,6 @@
 		<script src="js/main.js"></script>
 
 		<!-- linkedin link requirement for thumbnail -->
-		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+		<!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> -->
     </body>
 </html>
