--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
-        <link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href="css/magnific-popup.css">
+		
+		
+		<!-- linkedin link requirement for thumbnail -->
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 		
 		<!-- Xman CSS -->
         <link rel="stylesheet" href="css/normalize.css">
@@ -719,8 +723,5 @@
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC0RqLa90WDfoJedoE3Z_Gy7a7o8PCL2jw"></script>
         <script type="text/javascript" src="js/gmaps.min.js"></script>
 		<script src="js/main.js"></script>
-
-		<!-- linkedin link requirement for thumbnail -->
-		<!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> -->
     </body>
 </html>
