LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="social-body">
 			<ul>				
 				<li class="twitter"><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><i class="fa fa-linkedin"></i></a></li>
-				<li class="instagram"><a href="https://github.com/cholvie" target="blank"><i class="fa fa-github"></i></a></li>
+				<li class="instagram"><a href="https://github.com/ChristieHarwell" target="blank"><i class="fa fa-github"></i></a></li>
 				<li class="facebook"><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook"></i></a></li>
 				<!-- <li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li> -->
 			</ul>
@@ -121,7 +121,7 @@
 								<div class="social">
 									<ul>										
 										<li><a href="https://www.linkedin.com/in/christie-harwell-898517169/" target="blank"><i class="fa fa-linkedin"></i></a></li>
-										<li><a href="https://github.com/cholvie" target="blank"><i class="fa fa-github"></i></a></li>
+										<li><a href="https://github.com/ChristieHarwell" target="blank"><i class="fa fa-github"></i></a></li>
 										<li><a href="https://www.facebook.com/Christie-Harwell-595295864204089/" target="blank"><i class="fa fa-facebook-f"></i></a></li>
 										<!-- <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li> -->
 									</ul>
