LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 		
 		<!-- linkedin link requirement for thumbnail -->
-		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+		<!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> -->
 		
 		<!-- Xman CSS -->
         <link rel="stylesheet" href="css/normalize.css">
