LinkedIn correction push

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta property="og:image" content="YOURIMAGEURLGOESHERE.JPG">
         <title>Christie Harwell</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +20,9 @@
 		
 		
 		<!-- linkedin link requirement for thumbnail -->
-		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+		<!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> -->
+
+		
 		
 		<!-- Xman CSS -->
         <link rel="stylesheet" href="css/normalize.css">
