--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
 								<!-- single-service -->	
 								<div class="single-service">
-									<i class="fa fa-laptop"></i>
+									<i class="fa fa-file-code-o"></i>
 									<h5>Browser Based Technologies</h5>
 									<p>HTML5, CSS, Responsive Design, javascript, jQuery, React.js</p>
 								</div>
@@ -167,9 +167,9 @@
 								<!-- single-service -->	
 								<div class="single-service">
 									<i class="fa fa-database"></i>
-									<h5>Databases</h5>
-									<p>MySql</p>
-									<p>MongoDB</p>
+									<h5>Branding</h5>
+									<p>Name, Logo and tagline</p>
+									<p>Messaging strategy</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
@@ -184,10 +184,10 @@
 							<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
 								<!-- single-service -->	
 								<div class="single-service">
-									<i class="fa fa-file-code-o"></i>
-									<h5>Computer Science</h5>
-									<p>Data structures</p>
-									<p>Algorithms</p>
+									<i class="fa fa-laptop"></i>
+									<h5>User Experience (UX) / User Interface (UI) Specialist</h5>
+									<p>Human-computer interaction (HCI)</p>
+									<p>Business Analyst and Project Management</p>
 								</div>
 							</div>
 							
@@ -234,11 +234,11 @@
 										</div>
 										<div class="single-skill">
 											<div class="skill-title">
-												<h4>C#</h4>
+												<h4>Javascript</h4>
 											</div>
 											<div class="progress two">
-												<div class="progress-bar" data-percent="70">
-													<span>70%</span>
+												<div class="progress-bar" data-percent="80">
+													<span>85%</span>
 												</div>
 											</div>
 										</div>
@@ -254,11 +254,11 @@
 										</div>
 										<div class="single-skill">
 											<div class="skill-title">
-												<h4>Databases</h4>
+												<h4>PHP</h4>
 											</div>
 											<div class="progress two">
-												<div class="progress-bar" data-percent="90">
-													<span>90%</span>
+												<div class="progress-bar" data-percent="80">
+													<span>80%</span>
 												</div>
 											</div>
 										</div>
