--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<div class="col-md-6  col-sm-6 col-xs-12">
 							<div class="single-about">
 								<p class="bolt">I am Christie Harwell, User experience designer based in Atlanta, Georgia.</p>
-								<p>I love the way technology changes the world. I’m well versed in the languages of technology that are used to creative ways to deliver tech solutions. 
+								<p>I love the way technology changes the world. I’m versed in technology languages that are used to create ways to deliver solutions. 
 								<p>My receptiveness for learning new things and curiosity in the field of technology makes me the perfect conduit for creating tech solutions on various levels of complexity.</p>
 								<p>I’m looking for opportunities in web development that will be able to use my expertise.</p>
 								<p class="bolt">“Web design is not just about creating pretty layouts. It’s about understanding the marketing challenge behind your business.” 
